Add project operations
