# backend/src/main/java/cz/hostingcentrum/DTO/CreateProjectDTO.java
@@ -1,0 +1,11 @@
+package cz.hostingcentrum.DTO;
+
+import lombok.Data;
+
+@Data
+public class CreateProjectDTO {
+    private Long userId;
+    private String domain;
+    private String documentRoot;
+    private String runtime;
+}
