# backend/src/main/java/cz/hostingcentrum/DTO/ProjectDTO.java
@@ -1,0 +1,16 @@
+package cz.hostingcentrum.DTO;
+
+import lombok.*;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class ProjectDTO {
+    private Long id;
+    private Long userId;
+    private String domain;
+    private String documentRoot;
+    private String runtime;
+    private String publicationStatus;
+}
